--- a/index.html
+++ b/index.html
@@ -8,41 +8,43 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <div class="titulo">
-        <h1 id="titulo-principal">JOGO DA VELHA</h1>
-        <div class="nomes">
-            <p class="placar" id="placar1">0</p>
-            <img src="1.jpg" class="imagem" id="imagem1">
-            <input id="jogador1" type="text" name="1" placeholder="Jogador 1">
-            <input id="jogador2" type="text" name="2" placeholder="Jogador 2">
-            <img src="2.jpg" class="imagem" id="imagem2">
-            <p class="placar" id="placar2">0</p>
+    <div class="telaPrincipal">
+        <div class="titulo">
+            <h1 id="titulo-principal">JOGO DA VELHA</h1>
+            <div class="nomes">
+                <p class="placar" id="placar1">0</p>
+                <img src="1.jpg" class="imagem" id="imagem1">
+                <input id="jogador1" type="text" name="1" placeholder="Jogador 1">
+                <input id="jogador2" type="text" name="2" placeholder="Jogador 2">
+                <img src="2.jpg" class="imagem" id="imagem2">
+                <p class="placar" id="placar2">0</p>
+            </div>
         </div>
-    </div>
-    <div id="jogo">
-        <div class="linha">
-            <div class="casa" id="casa1"></div>
-            <div class="casa" id="casa2"></div>
-            <div class="casa" id="casa3"></div>
+        <div id="jogo">
+            <div class="linha">
+                <div class="casa" id="casa1"></div>
+                <div class="casa" id="casa2"></div>
+                <div class="casa" id="casa3"></div>
+            </div>
+            <div class="linha">
+                <div class="casa" id="casa4"></div>
+                <div class="casa" id="casa5"></div>
+                <div class="casa" id="casa6"></div>
+            </div>
+            <div class="linha">
+                <div class="casa" id="casa7"></div>
+                <div class="casa" id="casa8"></div>
+                <div class="casa" id="casa9"></div>
+            </div>
         </div>
-        <div class="linha">
-            <div class="casa" id="casa4"></div>
-            <div class="casa" id="casa5"></div>
-            <div class="casa" id="casa6"></div>
+        <div id="resultado"></div>
+        <div class="titulo">
+            <button id="reiniciar">Reiniciar</button>
+            <button id="novojogo">Novos Jogadores</button>
         </div>
-        <div class="linha">
-            <div class="casa" id="casa7"></div>
-            <div class="casa" id="casa8"></div>
-            <div class="casa" id="casa9"></div>
-        </div>
-    </div>
-    <div id="resultado"></div>
-    <div class="titulo">
-        <button id="reiniciar">Reiniciar</button>
-        <button id="novojogo">Novos Jogadores</button>
-    </div>
 
-    <p><textarea id="leitor"></textarea></p>
+        <p><textarea id="leitor"></textarea></p>
+    </div>
 
     <script type="text/javascript">
         $(document).on('click', '.casa', function(){
