--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Jogo da Velha</title>
+    <link rel="shortcut icon" href="jogo.ico">
     <link rel="stylesheet" type="text/css" href="reset.css"/> 
     <link rel="stylesheet" type="text/css" href="estilo.css"/>    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
