--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <div class="telaPrincipal">
         <div class="titulo">
-            <h1 id="titulo-principal">JOGO DA VELHA</h1>
+            <div class="subTitulo">
+                <img src="jogo.png" class="imagem">
+                <h1 id="titulo-principal">JOGO DA VELHA</h1>
+                <img src="jogo.png" class="imagem">
+            </div>
             <div class="nomes">
                 <p class="placar" id="placar1">0</p>
                 <img src="1.jpg" class="imagem" id="imagem1">
